Criação do dominio