@@ -7,15 +7,11 @@ import springfox.documentation.builders.PathSelectors;
 import springfox.documentation.builders.RequestHandlerSelectors;
 import springfox.documentation.service.*;
 import springfox.documentation.spi.DocumentationType;
+import springfox.documentation.spi.service.contexts.SecurityContext;
 import springfox.documentation.spring.web.plugins.Docket;
 import springfox.documentation.swagger2.annotations.EnableSwagger2;
-import springfox.documentation.spi.service.contexts.SecurityContext;
 
-
-import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
-
 
 @Configuration
 @EnableSwagger2
@@ -26,12 +22,11 @@ public class SwaggerConfig {
         return new Docket(DocumentationType.SWAGGER_2)
                 .useDefaultResponseMessages(false)
                 .select()
-                .apis(RequestHandlerSelectors
-                        .basePackage("com.example.SCCO_MVC.api.controller"))
+                .apis(RequestHandlerSelectors.basePackage("com.example.SCCO_MVC.controller"))
                 .paths(PathSelectors.any())
                 .build()
-                //.securityContexts(Arrays.asList(securityContext()))
-                //.securitySchemes(Arrays.asList(apiKey()))
+                .securityContexts(List.of(securityContext()))
+                .securitySchemes(List.of(apiKey()))
                 .apiInfo(apiInfo());
     }
 
@@ -43,7 +38,25 @@ public class SwaggerConfig {
                 .contact(contact())
                 .build();
     }
+
     private Contact contact() {
         return new Contact("Igor Rosa F. Pinto","https://github.com/rosaigor138","igorrosafilgueiras@gmail.com");
+    }
+
+    private ApiKey apiKey() {
+        return new ApiKey("JWT", "Authorization", "header");
+    }
+
+    private SecurityContext securityContext() {
+        return SecurityContext.builder()
+                .securityReferences(defaultAuth())
+                .forPaths(PathSelectors.any())
+                .build();
+    }
+
+    private List<SecurityReference> defaultAuth() {
+        AuthorizationScope authorizationScope = new AuthorizationScope("global", "accessEverything");
+        AuthorizationScope[] authorizationScopes = new AuthorizationScope[]{authorizationScope};
+        return List.of(new SecurityReference("JWT", authorizationScopes));
     }
 }
